--- a/package.json
+++ b/package.json
@@ -1,17 +1,11 @@
 {
   "name": "pandozorcabot",
   "version": "1.0.0",
-  "main": "bot.js",
-  "scripts": {
-    "start": "node bot.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "private": true,
   "dependencies": {
-    "dotenv": "^16.4.7",
-    "express": "^4.18.2",
     "node-telegram-bot-api": "^0.61.0"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
