--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/webhook.js",
+      "src": "api/**/*.js",
       "use": "@vercel/node"
     }
   ],
@@ -10,6 +10,10 @@
     {
       "src": "/api/webhook",
       "dest": "/api/webhook.js"
+    },
+    {
+      "src": "/",
+      "dest": "/api/index.js"
     }
   ]
 } 
