--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "dotenv": "^16.4.7",
     "node-telegram-bot-api": "^0.61.0"
   },
   "engines": {
